--- a/_posts/2017-04-19-Begin.md
+++ b/_posts/2017-04-19-Begin.md
@@ -4,7 +4,7 @@ title:  "Begin"
 date:   2017-04-19 17:22:30 +0800
 categories: diary
 location: Chengdu, China
-description: love markdown, love plain texts. Enjoy its manual
+description: My first Blog.
 ---
 ---
 开始开发生涯
