--- a/_posts/2018-03-31-近期的一些想法.md
+++ b/_posts/2018-03-31-近期的一些想法.md
@@ -11,3 +11,19 @@ description: 近期的一些对爱情的感悟
 
 很多时候已经想明白了，但过一段时间又忘了。周而复始，让彼此久久不能找到解决办法，也不能解脱。
 我和她之间到底是怎么回事呢，别人三年都已经谈婚论嫁，我们还是吵吵闹闹，时不时的分手。
+
+最近只要一点事情不顺她的意，她就会发脾气。尤其是我的沟通能力方面，在外面我总是害怕与人交流，被她说过后，我也是很努力的去调整自己，但是这也需要一个过程，我真的尽力去做了，但是还是达不到她的要求。我承认我沟通有问题，也会努力去改善。其实只要跟我好好说，不发脾气，我也会好好听的。
+
+我想这也是两个人之间的默契问题，我不想说话了，你找点话说，你不想说话了，我找点话说，和和气气的状态也很好。
+
+沟通能力是我现在面临的一座大山，不光感情上，还有工作上，这都是必须要去面对并解决的问题。不要害怕与人沟通，要抱着兴趣去与人沟通，与人为善。大大方方，不要扭扭捏捏，大家都是一样的，要成就大事，要过得开心，就必须要融入这个社会。这是对自己的负责。
+
+对她来说，我就是个累赘，我为什么会变成现在这个样子。
+
+每个人的价值观都不一样，也许在我看来难以理解的事情在别人眼里是非常的简单以及正常的。所以不要轻易去否定别人，站在别人的角度考虑问题。
+
+每次被骂，我的心情都不是太好。我和她之间的感情也是被磨得差不多了，后面这一年来，基本上每周都要吵架，都是我的不堪，我自己的身体也不允许再这样继续下去了。
+
+人站的高度不一样，接触的人不一样，如果不是很深的感情以及相互理解的话，恐怕很难继续下去吧。
+
+给自己点勇气，果断放手，也许更好。
