--- a/_posts/2018-03-31-近期的一些想法.md
+++ b/_posts/2018-03-31-近期的一些想法.md
@@ -27,3 +27,22 @@ description: 近期的一些对爱情的感悟
 人站的高度不一样，接触的人不一样，如果不是很深的感情以及相互理解的话，恐怕很难继续下去吧。
 
 给自己点勇气，果断放手，也许更好。
+
+在感情中，每一步都非常重要，我和她就是在这段感情中互相不尝试着去理解去妥协而造成的。
+
+我也感觉自己一直都是浑浑噩噩，除了上班啥都不会。怎样才能摆脱这种状态呢。
+
+2年来，我自己承担的压力也很重，精神上很空虚，没得啥子兴趣爱好。没得知心朋友，我想这也是因为我性格的原因。
+
+为什么我不愿意去尝试着放手呢，是因为害怕失去吗？担心找不到更好的？还是因为有所留恋呢？
+
+说实话，我讨厌一直被骂，我想和和气气的谈一段感情，哪怕没有结果。
+
+我可能真的让她失望了，站在她的角度来说，要找的是那种很优秀的男人，或者说是那种会交际的男人，有担当的男人，而我，啥都没。
+
+我也不知道自己为什么会变成这个样子，是因为从小到大的环境影响吗，那么害怕与人交流。
+
+我真的想摆脱这种状态。
+
+尝试着去锻炼，多看书，不主动去谈感情，好好陪伴家里人，做自己认为对的事，多交几个知心朋友。
+
