--- a/_posts/2018-03-31-近期的一些想法.md
+++ b/_posts/2018-03-31-近期的一些想法.md
@@ -46,3 +46,8 @@ description: 近期的一些对爱情的感悟
 
 尝试着去锻炼，多看书，不主动去谈感情，好好陪伴家里人，做自己认为对的事，多交几个知心朋友。
 
+"有些话，是必须你来说的
+有些话，是几个人之间总有一个要说的，一件平常的话，与其别人说，为什么你不自己说？"
+
+
+
