--- a/_posts/2018-04-18-智能预加载.md
+++ b/_posts/2018-04-18-智能预加载.md
@@ -5,11 +5,12 @@ key: 2018-04-18
 tags: iOS
 ---
 
-**“智能预取，技术革命”**
-在用户体验我们的手机客户端过程中，傻傻的等待是体验特别不好的行为。
-在设计体验的时候，尽量做到用户操作及时反馈，减少加载等待时间。
+#### **“智能预取，技术革命”**
+++在用户体验我们的手机客户端过程中，傻傻的等待是体验特别不好的行为。
+在设计体验的时候，尽量做到用户操作及时反馈，减少加载等待时间。++
 
 主要从以下几个方面减少等待时间：
+
 #### 1、列表加载更多数据
 - 无限滚动列表
 - threshold
