--- a/_posts/2018-04-18-智能预加载.md
+++ b/_posts/2018-04-18-智能预加载.md
@@ -6,9 +6,11 @@ tags: iOS
 ---
 
 #### **“智能预取，技术革命”**
+---
 ++在用户体验我们的手机客户端过程中，傻傻的等待是体验特别不好的行为。
 在设计体验的时候，尽量做到用户操作及时反馈，减少加载等待时间。++
 
+---
 主要从以下几个方面减少等待时间：
 
 #### 1、列表加载更多数据
@@ -28,3 +30,7 @@ tags: iOS
 
 #### 4、避免卡顿现象
 - 合理分配主线程使用
+
+---
+智能预加载，除了“预加载”之外，也要突出“智能”。不能死板的使用预加载技术，导致用户流量的大量消耗。
+按需加载与预加载应该找到一个平衡点。
